# liveboard

./: .env.example  Dockerfile.nginx  README.md  alembic.ini  docker-compose.yml  nginx.conf
alembic/versions/: 499137ae91b9_db_change.py
app/: Dockerfile  alembic.ini  main.py  pyproject.toml  requirements.txt
app/alembic/: env.py
app/auth/: auth.py  dependencies.py
app/db/: database.py  init_db.py  models.py
app/db/crud/: room.py
app/email/: celery_app.py  schema.py  tasks.py
app/handlers/: __init__.py  auth.py  ping.py  rooms.py
app/rooms/: rooms.py
app/services/rooms/: rooms.py
app/tasks/: Dockerfile.celery  __init__.py  celery_app.py  requirements.txt  tasks.py
app/templates/: header.html  login.html  main.html  my_rooms.html  register.html  room.html
